# Spellchecker

./: README.md  Spellchecker.cabal  spellcheck.hs  temp.hs  wordModel.hs
app/: Main.hs
test/: testCorpus.txt  testSuite.hs  wordModelTest.hs
ui/: interaction.hs
word-suggestion/: wordModel.hs  wordSuggester.hs
