cabal-version:      2.4
name:               Spellchecker
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis: Simple Haskell spellchecker

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Erin Cyffka, Mizuki Shindoh, Arya Stevinson
maintainer:         

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    README.md

executable Spellchecker
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0,
                      containers,
                      split
    hs-source-dirs:   app,
                      word-suggestion
    default-language: Haskell2010
    other-modules:    WordModel, WordSuggester

test-suite Test
    type:              exitcode-stdio-1.0
    main-is:           testSuite.hs
    build-depends:     base ^>=4.16.4.0,
                       containers,
                       split,
                       HUnit ^>=1.6.2.0
    hs-source-dirs:    test,
                       word-suggestion 
    other-modules:     WordModel, WordModelTest,
                       WordSuggester